--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
 
 .container{
     width: 100%;
+    width: 700px;
     height: 80vh;
     display: flex;
     flex-direction: column;
@@ -421,3 +422,4 @@ body{
     }
     
 }
+
